Add linux-atomix, and plymouth

--- a/atomix/efiboot/loader/entries/archiso-x86_64-linux.conf
+++ b/atomix/efiboot/loader/entries/archiso-x86_64-linux.conf
@@ -1,5 +1,5 @@
 title    Install Atomix Linux
 sort-key 01
-linux    /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
-initrd   /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
-options  archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID% nowatchdog
+linux    /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux-atomix
+initrd   /%INSTALL_DIR%/boot/x86_64/initramfs-linux-atomix.img
+options  archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID% nowatchdog quiet splash
